further work in progress

--- a/pages/html-css/exercises/elements/index.html
+++ b/pages/html-css/exercises/elements/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 
 <head>
-<meta charset="UTF-8" lang="de">
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/global.css">
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
-<title>HTML-Grundelemente</title>
+  <title>HTML-Grundelemente</title>
 </head>
 
 <body>
-<nav>
-  <a class="button" href="/">Home</a>
-  <a class="button" href="./../..">Zurück</a>
-</nav>
+  <nav>
+    <a class="button" href="/">Home</a>
+    <a class="button" href="./../..">Zurück</a>
+  </nav>
 
-<main>
+  <main>
+    <h1>HTML-Grundelemente</h1>
 
-<h1>HTML-Grundelemente</h1>
+    <table>
+      <tr>
+        <th>Element</th>
+        <th>Beschreibung</th>
+        <th>Notizen</th>
+      </tr>
 
-<table>
-  <tr>
-    <th>Element</th>
-    <th>Beschreibung</th>
-    <th>Notizen</th>
-  </tr>
+      <tr>
+        <td>
+          Hauptelemente
+          <ol>
+            <li>&lt;!DOCTYPE&gt;</li>
+            <li>&lt;html/&gt;</li>
+            <li>&lt;head/&gt;</li>
+            <li>&lt;body/&gt;</li>
+          </ol>
+        </td>
+        <td>
+          Alle zwingend notwendigen Elemente für ein HTML Dokument
+          <ul>
+            <li>Angabe des Dokumenten Types (DTD)</li>
+            <li>Beginn des Dokumentes</li>
+            <li>Kopfbereich des Dokumentes</li>
+            <li>Inhaltsbereich des Dokumentes</li>
+          </ul>
+        </td>
+      </tr>
 
-  <tr>
-    <td>
-      Hauptelemente
-      <ol>
-        <li>&lt;!DOCTYPE&gt;</li>
-        <li>&lt;html/&gt;</li>
-        <li>&lt;head/&gt;</li>
-        <li>&lt;body/&gt;</li>
-      </ol>
-    </td>
-    <td>
-      Alle zwingend notwendigen Elemente für ein HTML Dokument
-      <ul>
-        <li>Angabe des Dokumenten Types (DTD)</li>
-        <li>Beginn des Dokumentes</li>
-        <li>Kopfbereich des Dokumentes</li>
-        <li>Inhaltsbereich des Dokumentes</li>
-      </ul>
-    </td>
-  </tr>
-
-  <tr>
-    <td>
-      Block-Elemente
-      <ol>
-        <li>&lt;h1/&gt; &hellip; &lt;h6/&gt;</li>
-        <li>&lt;p/&gt;</li>
-        <li>&lt;ol/&gt;,&lt;ul/&gt;</li>
-        <li>&lt;li/&gt;</li>
-        <li>&lt;nav/&gt;</li>
-        <li>&lt;header/&gt;</li>
-        <li>&lt;footer/&gt;</li>
-        <li>&lt;section/&gt;</li>
-        <li>&lt;article/&gt;</li>
-        <li>&lt;main/&gt;</li>
-      </ol>
-    </td>
-    <td>
-      Definierung/Darstellung von Text-Blöcken
-      <ul>
-        <li>Zur Gestaltung con Überschriften</li>
-        <li>Zum Darstellen von (un-)nummerierten Aufzählungen</li>
-        <li>Bereich für die Navigationsleisten und Menüs</li>
-        <li>Sichtbarer Kopfbereich einer Website oder eines Teils der Seite</li>
-        <li>Fußbreich mit Informationen, die am Ende</li>
-      </ul>
-    </td>
-  </tr>
-</table>
-
-</main>
+      <tr>
+        <td>
+          Block-Elemente
+          <ol>
+            <li>&lt;h1/&gt; &hellip; &lt;h6/&gt;</li>
+            <li>&lt;p/&gt;</li>
+            <li>&lt;ol/&gt;,&lt;ul/&gt;</li>
+            <li>&lt;li/&gt;</li>
+            <li>&lt;nav/&gt;</li>
+            <li>&lt;header/&gt;</li>
+            <li>&lt;footer/&gt;</li>
+            <li>&lt;section/&gt;</li>
+            <li>&lt;article/&gt;</li>
+            <li>&lt;main/&gt;</li>
+          </ol>
+        </td>
+        <td>
+          Definierung/Darstellung von Text-Blöcken
+          <ul>
+            <li>Zur Gestaltung con Überschriften</li>
+            <li>Zum Darstellen von (un-)nummerierten Aufzählungen</li>
+            <li>Bereich für die Navigationsleisten und Menüs</li>
+            <li>
+              Sichtbarer Kopfbereich einer Website oder eines Teils der Seite
+            </li>
+            <li>Fußbreich mit Informationen, die am Ende</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+  </main>
 </body>
