--- a/pages/html-css/exercises/uncategorized/index.html
+++ b/pages/html-css/exercises/uncategorized/index.html
@@ -1,111 +1,113 @@
 <!DOCTYPE html>
 
 <head>
-<meta charset="UTF-8" lang="de">
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/global.css">
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
-<title>Nicht-kategorisierte Übungen</title>
+  <title>Nicht-kategorisierte Übungen</title>
 </head>
 
 <body>
-<nav>
-  <a class="button" href="/">Home</a>
-  <a class="button" href="./../..">Zurück</a>
-</nav>
+  <nav>
+    <a class="button" href="/">Home</a>
+    <a class="button" href="./../..">Zurück</a>
+  </nav>
 
-<main>
+  <main>
+    <h1>Nicht-kategorisierte Übungen</h1>
 
-<h1>Nicht-kategorisierte Übungen</h1>
+    <!-- Table -->
+    <h1>Tabellen-Übung</h1>
 
-<!-- Table -->
-<h1>Tabellen-Übung</h1>
-
-<table>
-  <tr>
-    <th>Hersteller</th>
-    <th>Modell</th>
-    <th>Technische Daten</th>
-  </tr>
-
-  <tr>
-    <td>Daimler AG</td>
-    <td>Mercedes-Benz W221</td>
-    <td>
     <table>
       <tr>
-        <td>Hubraum</td>
-        <td>3000 &lt;cm&sup3&gt;</td>
+        <th>Hersteller</th>
+        <th>Modell</th>
+        <th>Technische Daten</th>
       </tr>
 
       <tr>
-        <td>Gewicht</td>
-        <td>1800 &lt;kg&gt;</td>
+        <td>Daimler AG</td>
+        <td>Mercedes-Benz W221</td>
+        <td>
+          <table>
+            <tr>
+              <td>Hubraum</td>
+              <td>3000 &lt;cm&sup3&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Gewicht</td>
+              <td>1800 &lt;kg&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Leistung</td>
+              <td>173 &lt;kW&gt;</td>
+            </tr>
+          </table>
+        </td>
       </tr>
 
       <tr>
-        <td>Leistung</td>
-        <td>173 &lt;kW&gt;</td>
+        <td>Kia Motors</td>
+        <td>Sephia</td>
+        <td>
+          <table>
+            <tr>
+              <td>Hubraum</td>
+              <td>1598 &lt;cm&sup3&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Gewicht</td>
+              <td>1038 &lt;kg&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Leistung</td>
+              <td>59 &lt;kW&gt;</td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+
+      <tr>
+        <td>Ferrari</td>
+        <td>360 Spider</td>
+        <td>
+          <table>
+            <tr>
+              <td>Hubraum</td>
+              <td>3586 &lt;cm&sup3&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Gewicht</td>
+              <td>1425 &lt;kg&gt;</td>
+            </tr>
+
+            <tr>
+              <td>Leistung</td>
+              <td>294 &lt;kW&gt;</td>
+            </tr>
+          </table>
+        </td>
       </tr>
     </table>
-    </td>
-  </tr>
+    <!-- Table -->
 
-  <tr>
-    <td>Kia Motors</td>
-    <td>Sephia</td>
-    <td>
-    <table>
-      <tr>
-        <td>Hubraum</td>
-        <td>1598 &lt;cm&sup3&gt;</td>
-      </tr>
-
-      <tr>
-        <td>Gewicht</td>
-        <td>1038 &lt;kg&gt;</td>
-      </tr>
-
-      <tr>
-        <td>Leistung</td>
-        <td>59 &lt;kW&gt;</td>
-      </tr>
-    </table>
-    </td>
-  </tr>
-
-  <tr>
-    <td>Ferrari</td>
-    <td>360 Spider</td>
-    <td>
-    <table>
-      <tr>
-        <td>Hubraum</td>
-        <td>3586 &lt;cm&sup3&gt;</td>
-      </tr>
-
-      <tr>
-        <td>Gewicht</td>
-        <td>1425 &lt;kg&gt;</td>
-      </tr>
-
-      <tr>
-        <td>Leistung</td>
-        <td>294 &lt;kW&gt;</td>
-      </tr>
-    </table>
-    </td>
-  </tr>
-</table>
-<!-- Table -->
-
-<!-- Unordered Lists and References -->
-<h1>Listen-Übung (+ Ressourcen)</h1>
-<ul>
-  <li><a href="https://wiki.selfhtml.org/wiki/SELFHTML">SelfHTML</a></li>
-  <li><a href="https://validator.w3.org">W3C Markup Validator</a></li>
-  <li><a href="mailto:matthias.kraeusslein@tu-dresden.de">E-Mail an: Matthias Kräusslein</a></li>
-</ul>
-
-</main>
+    <!-- Unordered Lists and References -->
+    <h1>Listen-Übung (+ Ressourcen)</h1>
+    <ul>
+      <li><a href="https://wiki.selfhtml.org/wiki/SELFHTML">SelfHTML</a></li>
+      <li><a href="https://validator.w3.org">W3C Markup Validator</a></li>
+      <li>
+        <a href="mailto:matthias.kraeusslein@tu-dresden.de"
+          >E-Mail an: Matthias Kräusslein</a
+        >
+      </li>
+    </ul>
+  </main>
 </body>
