--- a/pages/html-css/index.html
+++ b/pages/html-css/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 
 <head>
-<meta charset="UTF-8" lang="de">
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/global.css">
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
-<title>HTML & CSS Übungen</title>
+  <title>HTML & CSS Übungen</title>
 </head>
 
 <body>
-<nav>
-  <a class="button" href="/">Home</a>
-</nav>
+  <nav>
+    <a class="button" href="/">Home</a>
+  </nav>
 
-<main>
+  <main>
+    <h1>HTML & CSS Übungen</h1>
 
-<h1>HTML & CSS Übungen</h1>
+    <table>
+      <tr>
+        <th>Übung</th>
+        <th>Beschreibung</th>
+      </tr>
 
-<table>
-  <tr>
-    <th>Übung</th>
-    <th>Beschreibung</th>
-  </tr>
+      <tr>
+        <td><a class="button" href="./exercises/elements">Grundelemente</a></td>
+        <td>Überblick über die wichtigsten HTML-Grundelemente.</td>
+      </tr>
 
-  <tr>
-    <td><a class="button" href="exercises/elements">Grundelemente</button></td>
-    <td>Überblick über die wichtigsten HTML-Grundelemente.</td>
-  </tr>
-
-  <tr>
-    <td><a class="button" href="exercises/uncategorized">Nicht kategorisiert</button></td>
-    <td>Übungen, die nicht zu einer Aufgabe zuzuordnen sind.</td>
-  </tr>
-</table>
-
-</main>
+      <tr>
+        <td>
+          <a class="button" href="./exercises/uncategorized"
+            >Nicht kategorisiert</a
+          >
+        </td>
+        <td>Übungen, die nicht zu einer Aufgabe zuzuordnen sind.</td>
+      </tr>
+    </table>
+  </main>
 </body>
