--- a/pages/js-tasks/tasks/task6.html
+++ b/pages/js-tasks/tasks/task6.html
@@ -1,49 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="./../javascript/task6.js"></script>
-		<style>
-			img {
-        height: 200px;
-        width: 200px;
-      }
-			table{
-				background-color: brown;
-			}
-		</style>
-    <title>Aufgabe 6 - Schuhregal</title>
-  </head>
-  <body>
-		<input type="number" id="inp" placeholder="Please enter a shoe size:" onkeydown="search(this)">
-		<button onclick="adding(); document.getElementById('inp').value = ''""">Enter</button>
+
+<head>
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+  <script src="./../scripts/task6.js"></script>
+
+  <style>
+    img {
+      height: 200px;
+      width: 200px;
+    }
+
+    table {
+      background-color: brown;
+    }
+  </style>
+
+  <title>Aufgabe 6 - Schuhregal</title>
+</head>
+
+<body>
+  <main>
+    <input
+      type="number"
+      id="inp"
+      placeholder="Please enter a shoe size:"
+      onkeydown="search(this)"
+    />
+    <button onclick="adding(); document.getElementById('inp').value = ''">
+      Enter
+    </button>
     <table>
       <tr>
-        <td class="44"><img src="./../img/cupboard.svg"></td>
-        <td class="37"><img src="./../img/cupboard.svg"></td>
-        <td class="38"><img src="./../img/cupboard.svg"></td>
-        <td class="39"><img src="./../img/cupboard.svg"></td>
-        <td class="40"><img src="./../img/cupboard.svg"></td>
+        <td class="44"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="37"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="38"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="39"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="40"><img src="/img/js-tasks/cupboard.svg" /></td>
       </tr>
       <tr>
-        <td class="41"><img src="./../img/cupboard.svg"></td>
-        <td class="42"><img src="./../img/cupboard.svg"></td>
-        <td class="43"><img src="./../img/cupboard.svg"></td>
-        <td class="40"><img src="./../img/cupboard.svg"></td>
-        <td class="45"><img src="./../img/cupboard.svg"></td>
+        <td class="41"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="42"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="43"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="40"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="45"><img src="/img/js-tasks/cupboard.svg" /></td>
       </tr>
       <tr>
-        <td class="46"><img src="./../img/cupboard.svg"></td>
-        <td class="47"><img src="./../img/cupboard.svg"></td>
-        <td class="48"><img src="./../img/cupboard.svg"></td>
-        <td class="44"><img src="./../img/cupboard.svg"></td>
-        <td class="50"><img src="./../img/cupboard.svg"></td>
+        <td class="46"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="47"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="48"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="44"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="50"><img src="/img/js-tasks/cupboard.svg" /></td>
       </tr>
     </table>
     <br />
     <button onclick="location.href='./../index.html'">Home</button>
-  </body>
-</html>
-
+  </main>
+</body>
