--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 
 <head>
-<meta charset="UTF-8" lang="de">
-<script type="module" src="https://md-block.verou.me/md-block.js"></script>
-<link rel="stylesheet" type="text/css" href="/styles/global.css">
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
-<title>Webdev-Übungen TUD22</title>
+  <title>Webdev-Übungen TUD22</title>
 </head>
 
 <body>
-<main>
-
-<div>
-  <md-block src="index.md"></md-block>
-</div>
-
-</main>
+  <main>
+    <div>
+      <md-block src="index.md"></md-block>
+    </div>
+  </main>
 </body>
