--- a/pages/js-tasks/tasks/task3.html
+++ b/pages/js-tasks/tasks/task3.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="UTF-8" lang="de">
-  <script src="./../scripts/task1.js"></script>
-	<title>Aufgabe 1 - Zahlen sortieren</title>
-</head>
-<body>
 
-	<br>
-	<button onclick="location.href='./../index.html'">Home</button>
+<head>
+  <meta charset="UTF-8" lang="de" />
+  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <script type="module" src="https://md-block.verou.me/md-block.js"></script>
+  <script src="./../scripts/task3.js"></script>
+
+  <title>Aufgabe 1 - Zahlen sortieren</title>
+</head>
+
+<body>
+  <main>
+    <button onclick="location.href='./../index.html'">Home</button>
+  </main>
 </body>
