--- a/pages/js-tasks/index.html
+++ b/pages/js-tasks/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" lang="de" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../styles/global.css" />
 
   <title></title>
 </head>
@@ -13,5 +13,47 @@
     <a class="button" href="/">Home</a>
   </nav>
 
-  <main></main>
+  <main>
+    <table>
+      <tr>
+        <th>Aufgabe</th>
+        <th>Beschreibung</th>
+      </tr>
+
+      <tr>
+        <td>
+          <a class="button" href="./tasks/task1.html">Aufgabe 1 - Zahlen sortieren</a>
+        </td>
+        <td>Beschreibung</td>
+      </tr>
+
+      <tr>
+        <td>
+          <a class="button" href="./tasks/task2.html">Aufgabe 2 - Schiebepuzzle</a>
+        </td>
+        <td>Beschreibung</td>
+      </tr>
+
+      <tr>
+        <td>
+          <a class="button" href="./tasks/task4.html">Aufgabe 4 - Weihnachtsmarkt</a>
+        </td>
+        <td>Beschreibung</td>
+      </tr>
+
+      <tr>
+        <td>
+          <a class="button" href="./tasks/task5.html">Aufgabe 5 - Memory</a>
+        </td>
+        <td>Beschreibung</td>
+      </tr>
+
+      <tr>
+        <td>
+          <a class="button" href="./tasks/task6.html">Aufgabe 6 - Schuhregal</a>
+        </td>
+        <td>Beschreibung</td>
+      </tr>
+    </table>
+  </main>
 </body>
