--- a/pages/js-tasks/tasks/task4.html
+++ b/pages/js-tasks/tasks/task4.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   <script src="./../scripts/task4.js"></script>
 
@@ -11,74 +11,68 @@
       background-color: rgb(232, 219, 191);
       height: 450px;
     }
+
     img {
       width: 150px;
       height: auto;
     }
+
   </style>
 
   <title>Aufgabe 4 - Weihnachtsmarkt</title>
 </head>
 
 <body>
+  <nav>
+    <a class="button" href="/">Home</a>
+    <a class="button" href="./..">Zurück</a>
+  </nav>
+
   <main>
     <table>
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
+        </td>
+        <td>
+          <img src="https://kennerblick.net/grafik/w/weihnachtsbaum70.gif" id="baum" onmouseover="change()"
+            onmouseout="changeBack()" />
         </td>
         <td>
           <img
-            src="https://www.kennerblick.net/grafik/w/weihnachtsbaum70.gif"
-            id="baum"
-            onmouseover="change()"
-            onmouseout="changeBack()"
-          />
-        </td>
-        <td>
-          <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
       <tr>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
         <td>
           <img
-            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif"
-          />
+            src="https://ubistatic-a.akamaihd.net/0034/int/forum/pictures/2016_12_xmas/building_improved_watermill_s.gif" />
         </td>
       </tr>
     </table>
     <br />
-    <button onclick="location.href='./../index.html'">Home</button>
   </main>
 </body>
