--- a/pages/js-tasks/tasks/task6.html
+++ b/pages/js-tasks/tasks/task6.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   <script src="./../scripts/task6.js"></script>
 
@@ -15,6 +15,7 @@
     table {
       background-color: brown;
     }
+
   </style>
 
   <title>Aufgabe 6 - Schuhregal</title>
@@ -22,39 +23,32 @@
 
 <body>
   <main>
-    <input
-      type="number"
-      id="inp"
-      placeholder="Please enter a shoe size:"
-      onkeydown="search(this)"
-    />
+    <input type="number" id="inp" placeholder="Please enter a shoe size:" onkeydown="search(this)" />
     <button onclick="adding(); document.getElementById('inp').value = ''">
       Enter
     </button>
     <table>
       <tr>
-        <td class="44"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="37"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="38"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="39"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="40"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="44"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="37"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="38"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="39"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="40"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
       </tr>
       <tr>
-        <td class="41"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="42"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="43"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="40"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="45"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="41"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="42"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="43"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="40"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="45"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
       </tr>
       <tr>
-        <td class="46"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="47"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="48"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="44"><img src="/img/js-tasks/cupboard.svg" /></td>
-        <td class="50"><img src="/img/js-tasks/cupboard.svg" /></td>
+        <td class="46"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="47"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="48"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="44"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
+        <td class="50"><img src="./../../../img/js-tasks/cupboard.svg" /></td>
       </tr>
     </table>
-    <br />
-    <button onclick="location.href='./../index.html'">Home</button>
   </main>
 </body>
