--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
   <title>Webdev-Übungen TUD22</title>
