--- a/pages/html-css/exercises/uncategorized.html
+++ b/pages/html-css/exercises/uncategorized.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
   <title>Nicht-kategorisierte Übungen</title>
@@ -104,9 +104,7 @@
       <li><a href="https://wiki.selfhtml.org/wiki/SELFHTML">SelfHTML</a></li>
       <li><a href="https://validator.w3.org">W3C Markup Validator</a></li>
       <li>
-        <a href="mailto:matthias.kraeusslein@tu-dresden.de"
-          >E-Mail an: Matthias Kräusslein</a
-        >
+        <a href="mailto:matthias.kraeusslein@tu-dresden.de">E-Mail an: Matthias Kräusslein</a>
       </li>
     </ul>
   </main>
