--- a/pages/js-tasks/tasks/task5.html
+++ b/pages/js-tasks/tasks/task5.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
+
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
   <script src="./../scripts/task5.js"></script>
 
   <style>
     body {
-      background-image: url("/img/js-tasks/body.svg");
+      background-image: url("./../../../img/js-tasks/body.svg");
       background-size: cover;
       display: grid;
       justify-content: center;
@@ -21,7 +22,7 @@
     }
 
     td {
-      background-image: url("/img/js-tasks/shokunin_sky_with_clouds.svg");
+      background-image: url("./../../../img/js-tasks/shokunin_sky_with_clouds.svg");
       background-size: cover;
     }
 
@@ -38,56 +39,62 @@
       width: 300px;
       text-align: center;
     }
+
   </style>
 
   <title>Aufgabe 5 - Memory</title>
 </head>
 
 <body>
+  <nav>
+    <a class="button" href="/">Home</a>
+    <a class="button" href="./..">Zurück</a>
+  </nav>
+
   <main>
     <div class="contain">
       <div class="">
         <table>
           <tr>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="1" onclick="slide(1)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="1" onclick="slide(1)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="2" onclick="slide(2)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="2" onclick="slide(2)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="3" onclick="slide(3)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="3" onclick="slide(3)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="4" onclick="slide(4)" />
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <img src="/img/js-tasks/Spades.svg" id="5" onclick="slide(5)" />
-            </td>
-            <td>
-              <img src="/img/js-tasks/Spades.svg" id="6" onclick="slide(6)" />
-            </td>
-            <td>
-              <img src="/img/js-tasks/Spades.svg" id="7" onclick="slide(7)" />
-            </td>
-            <td>
-              <img src="/img/js-tasks/Spades.svg" id="8" onclick="slide(8)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="4" onclick="slide(4)" />
             </td>
           </tr>
           <tr>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="9" onclick="slide(9)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="5" onclick="slide(5)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="10" onclick="slide(10)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="6" onclick="slide(6)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="11" onclick="slide(11)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="7" onclick="slide(7)" />
             </td>
             <td>
-              <img src="/img/js-tasks/Spades.svg" id="12" onclick="slide(12)" />
+              <img src="./../../../img/js-tasks/Spades.svg" id="8" onclick="slide(8)" />
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="./../../../img/js-tasks/Spades.svg" id="9" onclick="slide(9)" />
+            </td>
+            <td>
+              <img src="./../../../img/js-tasks/Spades.svg" id="10" onclick="slide(10)" />
+            </td>
+            <td>
+              <img src="./../../../img/js-tasks/Spades.svg" id="11" onclick="slide(11)" />
+            </td>
+            <td>
+              <img src="./../../../img/js-tasks/Spades.svg" id="12" onclick="slide(12)" />
             </td>
           </tr>
         </table>
@@ -97,9 +104,6 @@
         <p id="moves">Move: 0</p>
         <p id="pair">Pairs found: 0/6</p>
         <button id="res" onclick="reset()">reset</button>
-        <br />
-        <br />
-        <button onclick="location.href='./../index.html'">Home</button>
       </div>
     </div>
   </main>
