--- a/pages/js-tasks/tasks/task6.html
+++ b/pages/js-tasks/tasks/task6.html
@@ -22,6 +22,11 @@
 </head>
 
 <body>
+  <nav>
+    <a class="button" href="/">Home</a>
+    <a class="button" href="./..">Zurück</a>
+  </nav>
+
   <main>
     <input type="number" id="inp" placeholder="Please enter a shoe size:" onkeydown="search(this)" />
     <button onclick="adding(); document.getElementById('inp').value = ''">
