--- a/pages/html-css/index.html
+++ b/pages/html-css/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8" lang="de" />
-  <link rel="stylesheet" type="text/css" href="/styles/global.css" />
+  <link rel="stylesheet" type="text/css" href="./../../styles/global.css" />
   <script type="module" src="https://md-block.verou.me/md-block.js"></script>
 
   <title>HTML & CSS Übungen</title>
@@ -29,9 +29,7 @@
 
       <tr>
         <td>
-          <a class="button" href="./exercises/uncategorized"
-            >Nicht kategorisiert</a
-          >
+          <a class="button" href="./exercises/uncategorized">Nicht kategorisiert</a>
         </td>
         <td>Übungen, die nicht zu einer Aufgabe zuzuordnen sind.</td>
       </tr>
