--- a/pages/html-css/exercises/elements.html
+++ b/pages/html-css/exercises/elements.html
@@ -11,7 +11,7 @@
 <body>
   <nav>
     <a class="button" href="/">Home</a>
-    <a class="button" href="./../..">Zurück</a>
+    <a class="button" href="./..">Zurück</a>
   </nav>
 
   <main>
